--- a/style.css
+++ b/style.css
@@ -172,6 +172,8 @@ input[type=number]::-webkit-outer-spin-button {
     margin-bottom: 10px;
     color: hsl(186, 14%, 43%);
     font-weight: 700;
+    display: flex;
+    justify-content: space-between;
 }
 
 .col2{
@@ -340,5 +342,9 @@ input[type=number]::-webkit-outer-spin-button {
     width: 280px;
     text-align: center;
    }
+    
+    #people-para{
+    flex-direction: column;
+ }
 
 }
