--- a/style.css
+++ b/style.css
@@ -314,6 +314,8 @@ input[type=number]::-webkit-outer-spin-button {
    .container2-row{
     display: flex;
     justify-content: space-between;
+    margin-left: 12px;
+    margin-right: 12px;
    }
 
    .container2{
