--- a/style.css
+++ b/style.css
@@ -254,10 +254,10 @@ input[type=number]::-webkit-outer-spin-button {
 
     .row{
         margin-top: 32px;
-        width: 100vw;
+        width: 100%;
         height:1000px;
         flex-flow: column;
-        margin-left: auto;
+        margin-right: auto;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0 ;
     }
@@ -314,8 +314,8 @@ input[type=number]::-webkit-outer-spin-button {
    .container2-row{
     display: flex;
     justify-content: space-between;
-    margin-left: 12px;
-    margin-right: 12px;
+    margin-left: 3px;
+    margin-right: 3px;
    }
 
    .container2{
