--- a/style.css
+++ b/style.css
@@ -240,6 +240,9 @@ input[type=number]::-webkit-outer-spin-button {
     
 }
 
+
+    
+
 @media (max-width: 1015px){
     .heading{
         margin-top: 30px;
@@ -257,16 +260,18 @@ input[type=number]::-webkit-outer-spin-button {
         width: 100%;
         height:1000px;
         flex-flow: column;
-        margin-right: auto;
+        margin-left: auto;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0 ;
     }
 
     .col1{
-        width: 100%;
+        
         display: flex;
         justify-content: center;
         margin-bottom: 2px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
    .col2{
@@ -314,8 +319,8 @@ input[type=number]::-webkit-outer-spin-button {
    .container2-row{
     display: flex;
     justify-content: space-between;
-    margin-left: 3px;
-    margin-right: 3px;
+    margin-left: 0px;
+    margin-right: 0px;
    }
 
    .container2{
@@ -341,12 +346,13 @@ input[type=number]::-webkit-outer-spin-button {
    }
 
    .btn-reset{
-    width: 280px;
+    width: 315px;
     text-align: center;
    }
-    
-    #people-para{
+
+ #people-para{
     flex-direction: column;
  }
-
+ 
+   
 }
