--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ input[type=number]::-webkit-outer-spin-button {
    }
 
    .btn-reset{
-    width: 315px;
+    width: 88%;
     text-align: center;
    }
 
